# smartclean

./: .coverage  README.md  pyproject.toml  quickstart.py
examples/: quickstart.ipynb
examples/.ipynb_checkpoints/: quickstart-checkpoint.ipynb
src/smartclean/: __init__.py  cleaner.py  io.py  pipeline.py  profiler.py  report.py
src/smartclean/modules/: columns.py  duplicates.py  missing.py  outliers.py  text.py  types.py
tests/: test_columns.py  test_duplicates.py  test_missing.py  test_outliers.py  test_pipeline.py  test_profiler.py  test_text.py  test_types.py
