[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dfsmartclean"
version = "0.1.0"
description = "An intelligent, automatic data cleaning library for pandas DataFrames."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "David Ekundayo Lucas", email = "thedavidekundayo@gmail.com" }
]
keywords = ["data cleaning", "pandas", "data science", "preprocessing", "ETL"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.23.0",
]

[project.optional-dependencies]
outliers = ["scipy>=1.9.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "pandas-stubs",
]
all = ["smartclean[outliers,dev]"]

[project.urls]
Homepage = "https://github.com/JustSirDave/smartclean"
Documentation = "https://smartclean.readthedocs.io"
Repository = "https://github.com/JustSirDave/smartclean"
"Bug Tracker" = "https://github.com/JustSirDave/smartclean/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/smartclean"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/smartclean --cov-report=term-missing"

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.9"
strict = true